# ai-webmarketer

./: .editorconfig  .gitignore  README.md
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 32686c6436b1_add_competitor_posts.py  484e47b6352a_initial_schema.py  8046c6bb04f2_add_unique_constraint_on_competitors_.py  a9e8a4799250_add_ga4_daily_metrics.py  ab001003f08e_add_gsc_query_metrics.py  c4d5e6f70123_add_ga4_ai_referral_daily.py  d5e6f7081234_add_pro_marketer_features.py  e04e8fc6b7e3_add_partial_unique_index_and_rls_.py  e6f7081234ab_add_marketing_actions.py  f6da5caf3105_add_tenants_business_context_jsonb.py  f7081234abcd_add_page_speed_metrics.py
backend/app/: main.py  settings.py
backend/app/ai_engine/: json_parse.py  template_loader.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  (+16 more)
backend/app/auth/: jwt.py  middleware.py  password.py  tenant_context.py
backend/app/collectors/: google_oauth.py
backend/app/db/: base.py
backend/app/scheduler/: scheduler.py
backend/app/services/: alert_evaluator.py  anomaly_detector.py  competitor_analysis.py  kpi_aggregator.py  llms_txt_generator.py  report_pdf.py  resend_mailer.py  schema_injector.py  smtp_mailer.py  wordpress_publisher.py
backend/app/utils/: config_loader.py  encryption.py  logger.py  retry.py
backend/scripts/: backfill_citation_urls.py  backfill_ga4.py  backfill_gsc.py  bootstrap_self_tenant.py  create_admin_user.py  google_oauth_setup.py  register_llm_credentials.py  replace_target_queries.py  seed_prompt_templates.py
(+179 files in other folders)
